<resources>
    <string name="app_name">Simple_Calculator(IB)</string>
    <string name="IB">IB</string>

    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_.">.</string>
    <string name="btn_E">=</string>
    <string name="btn_D">÷</string>
    <string name="btn_M">×</string>
    <string name="btn_S">-</string>
    <string name="btn_A">+</string>
    <string name="btn_R">√</string>
    <string name="btn_Ans">Ans</string>
    <string name="btn_Del">DEL</string>
    <string name="btn_AC">AC</string>





</resources>